Added Leaflet map with d3 roads as layers

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block body %}
 
-<div id="nextmap">Loading map data...</div>
+<div id="nextmap"></div>
 
 {% endblock %}
