--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,14 +10,16 @@
 
   <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/app.css') }}" rel="stylesheet">
+  <link rel="stylesheet" href="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.css" />
+
 
 </head>
-<body>
+<body id="nextbus-tracker">
 
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -27,7 +29,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="/">Update</a></li>
+          <li><a href="#" v-on:click="updateResults">Update</a></li>
         </ul>
       </div>
     </div>
@@ -35,9 +37,16 @@
 
   <div class="container-fluid">
     {% block body %}{% endblock %}
+    <button v-on:click="updateResults">asdf</button>
   </div>
 
-  <script src="{{ url_for('static', filename='js/d3.min.js') }}"></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
+
+  <script src="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.js"></script>
+
+  <script src="{{ url_for('static', filename='js/jquery-3.0.0.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/vue.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 
