Implemented interval polling and bus location updating.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,11 @@
 {% extends "layout.html" %} {% block body %}
-
-<div id="nextmap"></div>
+<div class="row">
+	<div class="col-md-10">
+		<div id="nextmap"></div>
+	</div>
+	<div class="col-md-2" id="route_toggles">
+		<ul class="list-group"></ul>
+	</div>
+</div>
 
 {% endblock %}
