--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,17 +19,14 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
         <a class="navbar-brand" href="/">Nextbus Tracker</a>
       </div>
-      <div id="navbar" class="navbar-collapse collapse">
+      <div id="navbar">
         <ul class="nav navbar-nav">
           <li><a href="#" v-on:click="updateResults">Update</a></li>
+        </ul>
+        <ul class="nav navbar-nav pull-right navbar-collapse collapse">
+          <li><p class="navbar-text">Updates every 15s</p></li>
         </ul>
       </div>
     </div>
@@ -37,7 +34,6 @@
 
   <div class="container-fluid">
     {% block body %}{% endblock %}
-    <button v-on:click="updateResults">asdf</button>
   </div>
 
   <script src="http://d3js.org/d3.v3.min.js"></script>
