--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,11 +36,9 @@
     {% block body %}{% endblock %}
   </div>
 
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
-
-  <script src="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.js"></script>
-
+  <script src="{{ url_for('static', filename='js/d3.v3.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/topojson.v1.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/leaflet.js') }}"></script>
   <script src="{{ url_for('static', filename='js/jquery-3.0.0.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/vue.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
