--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,15 @@
 {% extends "layout.html" %} {% block body %}
 <div class="row">
-	<div class="col-md-10">
+	<div class="col-lg-10 col-md-9 col-sm-8">
 		<div id="nextmap"></div>
 	</div>
-	<div class="col-md-2" id="route_toggles">
-		<ul class="list-group"></ul>
+	<div class="col-lg-2 col-md-3 col-sm-4" id="route_toggles">
+    <div class="btn-group btn-group-justified">
+      <a href="#" class="btn btn-default" v-on:click="selectAllRoutes">Select All</a>
+      <a href="#" class="btn btn-default" v-on:click="selectNoRoutes">Select None</a>
+    </div>
+		<ul class="list-group">
+    </ul>
 	</div>
 </div>
 
